--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -7,6 +7,7 @@ body {
   color: white;
   box-shadow: 1px 1px 1px #2f2f2f;
   border: 0.4px solid #2f2f2f;
+  z-index: 100000;
 }
 
 .nav-buttons {
